# chessboard-tracker

./: CMakeLists.txt  README.md  package.xml
include/fast_checkerboard_detector/: fast_checkerboard_detector.h
launch/: fast_checkerboard_detector.launch  fast_checkerboard_detector_small.launch  usb_cam.launch
src/: fast_checkerboard_detector.cpp
